tests/ui/feature-gates/feature-gate-unsized-const-params.stderr
error: `[u8]` is forbidden as the type of a const generic parameter
  --> $DIR/feature-gate-unsized-const-params.rs:1:21
   |
LL | struct Foo<const N: [u8]>;
   |                     ^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`

error: aborting due to 1 previous error

